tests/baselines/reference/annotationDeclarationError3.errors.txt
tests/cases/conformance/annotations/annotationDeclarationError3.ets(2,5): error TS1131: Property or signature expected.
tests/cases/conformance/annotations/annotationDeclarationError3.ets(5,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/annotations/annotationDeclarationError3.ets (2 errors) ====
    interface I {
        @interface Anno {
        ~
!!! error TS1131: Property or signature expected.
            a: number
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    